feat(api): small fixes + agreement CRUD
